# ghc-repro

./: README.md  ghc-repro.cabal
src/: Main.hs
