name:                ghc-repro
version:             0.1.0.0
homepage:            https://github.com/parsonsmatt/ghc-repro#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2018 Matt Parsons
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library ghc-repro
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
