name:                ghc-repro
version:             0.1.0.0
homepage:            https://github.com/parsonsmatt/ghc-repro#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2018 Matt Parsons
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Main
  build-depends:       base >= 4.7 && < 5
